<resources>
    <string name="app_name">Emarat Project</string>
    <string name="start">شروع کنید</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_now">همین حالا ثبت نام کنید</string>
    <string name="name_hint">نام و نام خانوادگی</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="user_country_hint">کشور</string>
    <string name="user_city_hint">شهر</string>
    <string name="user_email_hint">ایمیل</string>
    <string name="sign_in">ثبت نام</string>
    <string name="select_country_city">شهر و کشور خود را انتخاب کنید</string>
    <string name="select_country_hint">کشور مورد نظر خود را انتخاب کنید</string>
    <string name="select_city">شهر مورد نظر خود را انتخاب کنید</string>
    <string name="next_step">مرحله بعدی</string>
    <string name="special_notice">آگهی های ویژه</string>
    <string name="four_star_hotel">هتل 4 ستاره</string>
    <string name="insert_notice_information">اطلاعات آگهی خود را وارد کنید</string>
    <string name="specific_notice_title">عنوان آگهی خود را مشخص کنید</string>
    <string name="take_photo">افزودن عکس</string>
    <string name="store_name">نام فروشگاه</string>
    <string name="store_location">مکان فروشگاه</string>
    <string name="select_location">موقعیت مکانی</string>
    <string name="category">دسته بندی</string>
    <string name="submit_notice">ثبت آگهی</string>
    <string name="profile_text">پروفایل کاربری</string>
    <string name="my_profile_text">پروفایل من</string>
    <string name="my_country_txt">کشور من</string>
    <string name="my_city">شهر من</string>
    <string name="principles">قوانین و مقررات</string>
    <string name="exit_btn">خروج</string>
    <string name="password_hint">رمز</string>
    <string name="telephone_number_hint">شماره تلفن ثابت</string>
    <string name="user_name_hint">نام کاربری</string>
    <string name="address_hint">آدرس</string>

    <string name="country_selected">کشور محل زندگی خود را انتخاب کنید</string>
    <string name="edit_information">ویرایش مشخصات</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connect_again">اتصال مجدد</string>
    <string name="menu_home">خانه</string>
    <string name="menu_add_notice">درج آگهی</string>
    <string name="menu_chat">چت</string>
    <string name="menu_account">پروفایل</string>
    <string name="address">آدرس</string>
    <string name="ex_date">تاریخ انقضا آگهی</string>
    <string name="telephone_hint">تلفن</string>
    <string name="abount_hint">توضیحات</string>
    <string name="country_hint">کشور</string>
    <string name="offer">تخفیف</string>
    <string name="date_picker_title">زمان انقضای آگهی را انتخاب کنید</string>

    <string name="location_dialog">ما برای نمایش این صفحه و ثبت آدرس از روی نقشه احتیاج به دسترسی به موقعیت جغرافیایی شما (Location) داریم .
        آیا به ما این دسترسی را می دهید ؟</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>